# HIV-agent

app/: .gitignore  app.py  ingest.py  logs.py  main.py  pyproject.toml  requirements.txt  search_agent.py  search_tools.py
kenya-hiv-cdss/: .gitignore  pyproject.toml  v1.1-Copy1.ipynb  v1.1.ipynb  v1.ipynb  v2.ipynb  v3.ipynb
kenya-hiv-cdss/app/: app.py  ingest.py  main.py  search_agent.py  search_tools.py
kenya-hiv-cdss/logs/: arv_guidelines_agent_v2_20260210_234618_fcc937.json  arv_guidelines_agent_v2_20260210_234813_125259.json  arv_guidelines_agent_v2_20260211_000606_5f09bc.json  arv_guidelines_agent_v2_20260211_000615_fa5e72.json  arv_guidelines_agent_v2_20260211_000628_096835.json  arv_guidelines_agent_v2_20260211_000655_fbae3f.json  arv_guidelines_agent_v2_20260211_000705_fd19ec.json  arv_guidelines_agent_v2_20260211_000715_77c73f.json  arv_guidelines_agent_v2_20260211_000735_9f41d1.json  arv_guidelines_agent_v2_20260211_000759_f1f377.json  arv_guidelines_agent_v2_20260211_000827_d4efca.json  arv_guidelines_agent_v2_20260211_001724_614ddb.json  arv_guidelines_agent_v2_20260211_001748_1191a1.json  arv_guidelines_agent_v2_20260211_001755_ff97ca.json  arv_guidelines_agent_v2_20260211_001804_0df79d.json  arv_guidelines_agent_v2_20260211_001807_2eaed9.json  arv_guidelines_agent_v2_20260211_001815_d1c6bc.json  arv_guidelines_agent_v2_20260211_002059_7a3de6.json  arv_guidelines_agent_v2_20260211_002107_bbed66.json  arv_guidelines_agent_v2_20260211_002114_492f42.json  arv_guidelines_agent_v2_20260211_002121_433908.json  faq_agent_20260211_001615_a1cbc1.json  (+24 more)
(+5 files in other folders)
